# audio-scrapper

./: .env  .env.example  .gitignore  Cargo.toml  README.md  log.txt
src/: lib.rs  main.rs  music.txt
