[package]
name = "audio-scrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
rspotify = {version = "0.12.0",features=["cli"]}
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
youtube_dl = "0.9.0"
