[package]
name = "audio-scrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
clap = { version = "4.4.3", features = ["derive"] }
dotenvy = "0.15.7"
rayon = "1.7.0"
rspotify = {version = "0.12.0",features=["cli"]}
snafu = "0.7.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
youtube_dl = "0.9.0"
